demo/traefikEE/k8s/hotrod/hotrod.yaml

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hotrod
  namespace: hotrod
spec:
  template:
    metadata:
      labels:
        app: hotrod
    spec:
      containers:
      - image: jaegertracing/example-hotrod:1.10
        name: hotrod
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hotrod
  namespace: hotrod
  labels:
    app: hotrod
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: hotrod
  selector:
    app: hotrod
